--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Monster Survivors - Epic Survival Adventure Game | Play Online</title>
     <meta name="description" content="Play Monster Survivors online - an epic survival adventure game where you battle against waves of monsters. Experience intense gameplay, upgrade your character, and survive in this thrilling action-packed game.">
     <link rel="canonical" href="https://donggame.online" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7QNPS7FTRM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      
+      gtag('config', 'G-7QNPS7FTRM');
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
