--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monster Survivors - Epic Survival Adventure Game | Play Online</title>
+    <title>Monster Survivors - Epic Survival Adventure Game | donggame Play Online</title>
     <meta name="description" content="Play Monster Survivors online - an epic survival adventure game where you battle against waves of monsters. Experience intense gameplay, upgrade your character, and survive in this thrilling action-packed game.">
     <link rel="canonical" href="https://donggame.online" />
     <!-- Google tag (gtag.js) -->
@@ -51,6 +51,14 @@
 
         <section id="play" class="mb-12">
             <div class="game-container bg-white rounded-lg shadow-lg overflow-hidden">
+                <iframe 
+                    src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.html" 
+                    class="w-full h-full border-0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+             <div class="game-container bg-white rounded-lg shadow-lg overflow-hidden">
                 <iframe 
                     src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.html" 
                     class="w-full h-full border-0"
