--- a/index.html
+++ b/index.html
@@ -1,135 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monster Survivors - Epic Survival Adventure Game | donggame Play Online</title>
-    <meta name="description" content="Play Monster Survivors online - an epic survival adventure game where you battle against waves of monsters. Experience intense gameplay, upgrade your character, and survive in this thrilling action-packed game.">
-    <link rel="canonical" href="https://donggame.online" />
-    <!-- Google tag (gtag.js) -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags (default: English) -->
+    <title>Monster Survivors – Free Epic Survival Game | DongGame Online</title>
+    <meta name="description" content="Play Monster Survivors online for free! Battle relentless waves of monsters, upgrade your hero and survive in this fast‑paced action game – no download required." />
+    <link rel="canonical" href="https://donggame.online/monster-survivors" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index,follow" />
+    <!-- Google Search Console verification (replace XXXXX with your code) -->
+    <meta name="google-site-verification" content="XXXXX" />
+
+    <!-- Sitemap hint -->
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+
+    <!-- Alternate language URL (Chinese) -->
+    <link rel="alternate" hreflang="zh-CN" href="https://donggame.online/monster-survivors?lang=zh" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://donggame.online/monster-survivors" />
+    <meta property="og:title" content="Monster Survivors – Free Epic Survival Game | DongGame Online" />
+    <meta property="og:description" content="Play Monster Survivors in your browser: survive endless monster waves, collect power‑ups and climb the leaderboard!" />
+    <meta property="og:image" content="https://donggame.online/assets/monster-survivors-og.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Monster Survivors – Free Epic Survival Game | DongGame Online" />
+    <meta name="twitter:description" content="Play now – upgrade your hero & defeat hordes of monsters in this addictive survival shooter!" />
+    <meta name="twitter:image" content="https://donggame.online/assets/monster-survivors-og.jpg" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "VideoGame",
+        "name": "Monster Survivors",
+        "url": "https://donggame.online/monster-survivors",
+        "image": "https://donggame.online/assets/monster-survivors-og.jpg",
+        "genre": ["Action", "Survival"],
+        "operatingSystem": "Web Browser",
+        "applicationCategory": "Game",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "DongGame"
+        },
+        "description": "Monster Survivors is a browser‑based action survival game. Fight waves of monsters, gather power‑ups and see how long you can last!"
+      }
+    </script>
+
+    <!-- Google Analytics (GA4) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7QNPS7FTRM"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      
-      gtag('config', 'G-7QNPS7FTRM');
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-7QNPS7FTRM");
+      gtag("config", "G-JQNPS3TFBM");
     </script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f5f5f7;
-        }
-        .game-container {
-            aspect-ratio: 16/9;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-    </style>
-</head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JQNPS3TFBM"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-JQNPS3TFBM');
-</script>
-<body class="min-h-screen">
-    <header class="bg-white shadow-sm">
-        <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
-            <div class="flex justify-between items-center">
-                <div class="text-2xl font-bold text-gray-900">Monster Survivors</div>
-                <div class="hidden md:flex space-x-6">
-                    <a href="#about" class="text-gray-600 hover:text-gray-900">About</a>
-                    <a href="#gameplay" class="text-gray-600 hover:text-gray-900">Gameplay</a>
-                    <a href="#play" class="text-gray-600 hover:text-gray-900">Play Now</a>
-                </div>
-            </div>
-        </nav>
+    <!-- Fonts & Utility CSS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <style>
+      body {
+        font-family: "Inter", sans-serif;
+        background-color: #f5f5f7;
+      }
+      .game-container {
+        aspect-ratio: 16/9;
+        max-width: 1200px;
+        margin: 0 auto;
+      }
+      .iframe-portal {
+        width: 100%;
+        height: 80vh;
+      }
+      @media (max-width: 640px) {
+        .iframe-portal {
+          height: 60vh;
+        }
+      }
+    </style>
+
+    <!-- Fallback SEO text for bots without JS -->
+    <noscript>
+      <div style="max-width:720px;margin:2rem auto;font-family:Inter,Arial,sans-serif;font-size:16px;line-height:1.6;color:#333">
+        <h1>Monster Survivors ‑ Free Browser Survival Game</h1>
+        <p>Monster Survivors is an addictive action‑survival shooter that you can play directly in your browser without download. Fight through endless waves of monsters, collect power‑ups and upgrades, and see how long you can survive. Click <a href="https://donggame.online/monster-survivors">here</a> to start playing instantly.</p>
+        <h2>怪物幸存者 ‑ 免费浏览器生存射击游戏</h2>
+        <p>《Monster Survivors》是一款无需下载即可在浏览器中畅玩的动作生存射击游戏。玩家要在无尽怪物的围攻下存活，并通过收集强化道具与升级技能来突破极限。立即点击 <a href="https://donggame.online/monster-survivors?lang=zh">这里</a> 开始游戏！</p>
+      </div>
+    </noscript>
+  </head>
+
+  <body class="min-h-screen flex flex-col" x-data="langSwitcher()" x-init="init()" :class="{ 'lang-zh': lang === 'zh', 'lang-en': lang === 'en' }">
+    <a href="#main" class="sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 focus:bg-white focus:ring-2 focus:ring-indigo-600 focus:px-4 focus:py-2">Skip to content</a>
+
+    <!-- Header -->
+    <header class="bg-white/90 backdrop-blur shadow-sm sticky top-0 z-50">
+      <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center" aria-label="Primary Navigation">
+        <a href="/" class="text-2xl font-bold text-gray-900">DongGame</a>
+        <ul class="hidden md:flex space-x-8 text-sm font-medium">
+          <li><a href="#about" class="hover:text-indigo-600" data-i18n="nav_about">About</a></li>
+          <li><a href="#gameplay" class="hover:text-indigo-600" data-i18n="nav_guide">Guide</a></li>
+          <li><a href="#play" class="hover:text-indigo-600" data-i18n="nav_play">Play</a></li>
+        </ul>
+        <!-- Language toggle -->
+        <button id="lang-toggle" @click="toggle()" class="ml-4 text-sm px-3 py-1.5 rounded-md border border-gray-300 hover:bg-gray-100">
+          <span data-i18n="btn_lang">中文</span>
+        </button>
+      </nav>
     </header>
 
-    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-        <section class="text-center mb-12">
-            <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Monster Survivors</h1>
-            <p class="text-xl text-gray-600 max-w-2xl mx-auto">Embark on an epic survival adventure where you battle against waves of relentless monsters in this action-packed online game.</p>
-        </section>
+    <!-- Main -->
+    <main id="main" class="flex-grow max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
+      <!-- Hero -->
+      <section class="text-center mb-16">
+        <h1 class="text-4xl md:text-5xl font-extrabold text-gray-900 mb-5 tracking-tight">Monster Survivors</h1>
+        <p class="text-lg md:text-xl text-gray-600 max-w-3xl mx-auto" data-i18n="hero_desc">Battle endless waves of monsters, collect power‑ups and test your survival limits.</p>
+      </section>
 
-        <section id="play" class="mb-12">
-            <div class="game-container bg-white rounded-lg shadow-lg overflow-hidden">
-                <iframe 
-                    src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.html" 
-                    class="w-full h-full border-0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-                </iframe>
-            </div>
-             <div class="game-container bg-white rounded-lg shadow-lg overflow-hidden">
-                <iframe 
-                    src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.html" 
-                    class="w-full h-full border-0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-                </iframe>
-            </div>
-        </section>
+      <!-- Crawlable Introduction Text (EN + ZH) -->
+      <section class="max-w-3xl mx-auto mb-16 space-y-6 text-gray-700 leading-relaxed">
+        <p>Monster Survivors is more than a simple shooter – it is a test of strategy and stamina. Each round introduces new enemy types, random power‑ups and upgrade paths that drastically change the way you fight. Whether you are a casual gamer looking for a quick 5‑minute challenge or a hardcore player aiming to top the global leaderboard, this game scales to your skill level.</p>
+        <p>《Monster Survivors》不仅仅是“打打怪”那么简单，更考验玩家的策略思维与持久战能力。每一波都会刷新不同类型的怪物与随机增益道具，合理选择升级路线能让你在危急时刻扭转战局。无论你是想利用碎片时间快速体验，还是追求全球排行榜的极限分数，这款游戏都能满足你的需求。</p>
+      </section>
 
-        <section id="about" class="mb-12">
-            <h2 class="text-3xl font-bold text-gray-900 mb-6">About Monster Survivors</h2>
-            <div class="grid md:grid-cols-2 gap-8">
-                <div class="bg-white p-6 rounded-lg shadow-sm">
-                    <h3 class="text-xl font-semibold text-gray-900 mb-4">Game Overview</h3>
-                    <p class="text-gray-600">Monster Survivors is an engaging survival game that puts your strategic thinking and reflexes to the test. As a lone survivor, you must fend off waves of increasingly challenging monsters while collecting resources and upgrading your abilities.</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-sm">
-                    <h3 class="text-xl font-semibold text-gray-900 mb-4">Key Features</h3>
-                    <ul class="text-gray-600 space-y-2">
-                        <li>• Intense wave-based combat system</li>
-                        <li>• Character progression and upgrades</li>
-                        <li>• Dynamic monster AI</li>
-                        <li>• Smooth controls and responsive gameplay</li>
-                        <li>• Cross-platform compatibility</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+      <!-- Game iframes -->
+      <section id="play" class="space-y-12" aria-labelledby="play-heading">
+        <h2 id="play-heading" class="sr-only">Play Monster Survivors</h2>
 
-        <section id="gameplay" class="mb-12">
-            <h2 class="text-3xl font-bold text-gray-900 mb-6">How to Play</h2>
-            <div class="bg-white p-6 rounded-lg shadow-sm">
-                <div class="grid md:grid-cols-2 gap-8">
-                    <div>
-                        <h3 class="text-xl font-semibold text-gray-900 mb-4">Controls</h3>
-                        <ul class="text-gray-600 space-y-2">
-                            <li>• WASD or Arrow Keys - Move character</li>
-                            <li>• Mouse - Aim and shoot</li>
-                            <li>• Space - Special ability</li>
-                            <li>• E - Interact with objects</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3 class="text-xl font-semibold text-gray-900 mb-4">Objectives</h3>
-                        <ul class="text-gray-600 space-y-2">
-                            <li>• Survive waves of monster attacks</li>
-                            <li>• Collect resources and power-ups</li>
-                            <li>• Upgrade your character's abilities</li>
-                            <li>• Unlock new weapons and skills</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="bg-white border-t mt-12">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-            <div class="text-center text-gray-600">
-                <p>© 2024 Monster Survivors. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
-</body>
-</html> 
+        <!-- Original game iframe -->
+        <div class="game-container bg-white rounded-2xl shadow-lg overflow-hidden ring-1 ring-gray-200">
+          <iframe src="https
